kubernetes/eks/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: solar-system
  labels:
    app.kubernetes.io/name: solar-system
    app.kubernetes.io/part-of: solar-system
