kubernetes/eks/08-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: solar-system-app
  namespace: solar-system
  labels:
    app.kubernetes.io/name: solar-system-app
    app.kubernetes.io/part-of: solar-system
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: solar-system-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: solar-system-app
        app.kubernetes.io/part-of: solar-system
    spec:
      containers:
        - name: solar-system-app
          image: aunghtetlwin/solar-system-app:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /live
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
