kubernetes/eks/03-mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: solar-system
  labels:
    app.kubernetes.io/name: mongo
    app.kubernetes.io/part-of: solar-system
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: mongo
