kubernetes/eks/09-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: solar-system-app
  namespace: solar-system
  labels:
    app.kubernetes.io/name: solar-system-app
    app.kubernetes.io/part-of: solar-system
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: solar-system-app
  ports:
    - name: http
      port: 80
      targetPort: http
