kubernetes/eks/12-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: solar-system-app
  namespace: solar-system
  labels:
    app.kubernetes.io/name: solar-system-app
    app.kubernetes.io/part-of: solar-system
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /live
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/load-balancer-name: solar-system-dev-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/tags: Project=solar-system,Environment=dev,ManagedBy=kubernetes
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: solar-system-app
                port:
                  number: 80
